--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/node": "^12.20.16",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "@xstate/react": "^1.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xstate": "^4.22.0"
   },
   "scripts": {
     "start": "react-scripts start",
