--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "socket.io-client": "^4.1.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2",
     "xstate": "^4.22.0"
@@ -23,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom --verbose=false",
     "test:nowatch": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "prepare": "husky install"
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/faker": "^5.5.8",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
@@ -50,9 +52,11 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "faker": "^5.5.3",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.1",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "socket.io": "^4.1.3"
   },
   "lint-staged": {
     "**/*.ts?(x)": [
